--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<main class="mat-app-background">
+<app-navbar [title]="title"></app-navbar>
+
+<main class="{{ currentTheme }} mat-app-background">
   <router-outlet></router-outlet>
 </main>
