--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -4,7 +4,7 @@
          [type]="isHidden ? 'password' : 'text'">
 
   <mat-icon matPrefix>lock</mat-icon>
-  <mat-error>{{ error }}</mat-error>
+  <mat-error>{{ getError() }}</mat-error>
 
   <button mat-icon-button matSuffix type="button"
           [matTooltip]="isHidden ? 'Show password' : 'Hide password'"
