--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,8 +15,7 @@ html, body {
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+  font-weight: bold;
 }
 
 form {
@@ -31,9 +30,11 @@ form {
 
 .container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 
-  .mat-card {
+  .form-card {
     width: 100%;
     box-sizing: border-box;
 
