--- a/src/themes.scss
+++ b/src/themes.scss
@@ -2,26 +2,30 @@
 @include mat.core();
 
 $primary-color: mat.define-palette(mat.$indigo-palette);
-$accent-color: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$warn-color: mat.define-palette(mat.$red-palette);
+$accent-color : mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$warn-color   : mat.define-palette(mat.$red-palette);
 
 $light-theme: mat.define-light-theme((
   color: (
     primary: $primary-color,
-    accent: $accent-color,
-    warn: $warn-color
+    accent : $accent-color,
+    warn   : $warn-color
   )
 ));
 
 $dark-theme: mat.define-dark-theme((
   color: (
     primary: $primary-color,
-    accent: $accent-color,
-    warn: $warn-color
+    accent : $accent-color,
+    warn   : $warn-color
   )
 ));
 
 @include mat.all-component-themes($light-theme);
+
+a {
+  color: mat.get-color-from-palette($accent-color, 'default');
+}
 
 .dark {
   @include mat.all-component-themes($dark-theme);
