--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,40 +1,54 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <a mat-button routerLink="/" routerLinkActive="mat-flat-button"
+    <button mat-icon-button class="xs-none"
+            (click)="drawerToggle.emit()">
+      <mat-icon>menu</mat-icon>
+    </button>
+
+    <a mat-button routerLink="/"
+       routerLinkActive="mat-flat-button"
        [routerLinkActiveOptions]="{ exact: true }">
       <mat-icon>notifications_active</mat-icon>
       {{ title }}
     </a>
 
     <div>
-      <ng-container *ngIf="token; else unauthorized">
-        <button mat-button [matMenuTriggerFor]="menu">
-          <mat-icon inline>keyboard_arrow_down</mat-icon>
-          Welcome, {{ token.name }}
-        </button>
-
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item (click)="logoutUser()">
-            <mat-icon>meeting_room</mat-icon>
-            Logout
+      <div class="xs-flex">
+        <ng-container *ngIf="token; else unauthorized">
+          <button mat-button [matMenuTriggerFor]="menu">
+            <mat-icon inline>keyboard_arrow_down</mat-icon>
+            Welcome, {{ token.name }}
           </button>
-        </mat-menu>
-      </ng-container>
 
-      <ng-template #unauthorized>
-        <a mat-button routerLink="/login" routerLinkActive="mat-flat-button">
-          <mat-icon>exit_to_app</mat-icon>
-          Login
-        </a>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="logoutUser()">
+              <mat-icon>meeting_room</mat-icon>
+              Logout
+            </button>
+          </mat-menu>
+        </ng-container>
 
-        <a mat-button routerLink="/register" routerLinkActive="mat-flat-button">
-          <mat-icon>person_add</mat-icon>
-          Register
-        </a>
-      </ng-template>
+        <ng-template #unauthorized>
+          <a mat-button routerLink="/login"
+             routerLinkActive="mat-flat-button">
+            <mat-icon>exit_to_app</mat-icon>
+            Login
+          </a>
 
-      <button mat-icon-button matTooltip="Use {{ oppositeTheme }} theme" (click)="reverseTheme()">
-        <mat-icon>{{ oppositeTheme === 'light' ? 'wb_sunny' : 'brightness_2' }}</mat-icon>
+          <a mat-button routerLink="/register"
+             routerLinkActive="mat-flat-button">
+            <mat-icon>person_add</mat-icon>
+            Register
+          </a>
+        </ng-template>
+      </div>
+
+      <button mat-icon-button
+              matTooltip="Use {{ oppositeTheme }} theme"
+              (click)="reverseTheme()">
+        <mat-icon>
+          {{ oppositeTheme === 'light' ? 'wb_sunny' : 'brightness_2' }}
+        </mat-icon>
       </button>
     </div>
   </mat-toolbar-row>
