--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,31 +8,9 @@
     </mat-card-subtitle>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput type="email" [formControl]="email">
-
-        <mat-icon matPrefix>email</mat-icon>
-        <mat-error>{{ getError(email, 'Email') }}</mat-error>
-      </mat-form-field>
-
+      <app-email [control]="email"></app-email>
       <app-password [control]="password"></app-password>
-
-      <div class="button-group">
-        <div [matTooltip]="form.invalid ? 'Fill in all required fields!' : ''">
-          <button mat-flat-button color="primary" type="submit"
-                  [disabled]="form.invalid || form.disabled">
-            <mat-icon inline>check</mat-icon>
-            Submit
-          </button>
-        </div>
-
-        <button mat-flat-button color="warn" type="reset"
-                [disabled]="form.disabled">
-          <mat-icon inline>close</mat-icon>
-          Reset
-        </button>
-      </div>
+      <app-form-actions [form]="form"></app-form-actions>
     </form>
 
     <mat-card-footer *ngIf="form.disabled">
