--- a/src/app/components/password/password.component.html
+++ b/src/app/components/password/password.component.html
@@ -1,13 +1,13 @@
 <mat-form-field appearance="outline">
   <mat-label>Password</mat-label>
   <input matInput [formControl]="control"
-         [type]="isHidden ? 'password' : 'text'">
+         [type]="isHidden ? 'password' : 'text'"/>
 
   <mat-icon matPrefix>lock</mat-icon>
   <mat-error>{{ getError() }}</mat-error>
 
   <button mat-icon-button matSuffix type="button"
-          [matTooltip]="isHidden ? 'Show password' : 'Hide password'"
+          [matTooltip]="(isHidden ? 'Show' : 'Hide') + ' password'"
           (click)="isHidden = !isHidden">
     <mat-icon>{{ isHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
   </button>
