--- a/src/themes.scss
+++ b/src/themes.scss
@@ -5,21 +5,14 @@ $primary-color: mat.define-palette(mat.$indigo-palette);
 $accent-color : mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $warn-color   : mat.define-palette(mat.$red-palette);
 
-$light-theme: mat.define-light-theme((
-  color: (
-    primary: $primary-color,
-    accent : $accent-color,
-    warn   : $warn-color
-  )
-));
+$palette: (
+  primary: $primary-color,
+  accent : $accent-color,
+  warn   : $warn-color
+);
 
-$dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $primary-color,
-    accent : $accent-color,
-    warn   : $warn-color
-  )
-));
+$light-theme: mat.define-light-theme((color: $palette));
+$dark-theme : mat.define-dark-theme((color: $palette));
 
 @include mat.all-component-themes($light-theme);
 
