email notifications & refactoring

--- a/src/app/components/form-fields/password-field/password-field.component.html
+++ b/src/app/components/form-fields/password-field/password-field.component.html
@@ -7,7 +7,7 @@
   <mat-error>{{ getError() }}</mat-error>
 
   <button mat-icon-button matSuffix type="button"
-          [matTooltip]="(isHidden ? 'Show' : 'Hide') + ' password'"
+          [matTooltip]="(isHidden ? 'Show' : 'Hide') + ' password-field'"
           (click)="isHidden = !isHidden">
     <mat-icon>{{ isHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
   </button>
