dashboard & server-side rendering

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="form-card">
+  <mat-card class="container-element">
     <mat-card-title>Login</mat-card-title>
 
     <mat-card-subtitle>
