--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="form-card">
+  <mat-card class="container-element">
     <mat-card-title>Register</mat-card-title>
 
     <mat-card-subtitle>
