--- a/src/app/components/forms/subscription-form/subscription-form.component.html
+++ b/src/app/components/forms/subscription-form/subscription-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-card class="form-card">
+  <mat-card class="container-element">
     <mat-card-title>Subscribe</mat-card-title>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
