--- a/src/app/components/form-fields/password-field/password-field.component.html
+++ b/src/app/components/form-fields/password-field/password-field.component.html
@@ -1,14 +1,21 @@
 <mat-form-field appearance="outline">
   <mat-label>Password</mat-label>
-  <input matInput [formControl]="control"
-         [type]="isHidden ? 'password' : 'text'"/>
+  <input
+    matInput
+    [formControl]="control"
+    [type]="isHidden ? 'password' : 'text'"
+  />
 
   <mat-icon matPrefix>lock</mat-icon>
-  <mat-error>{{ getError() }}</mat-error>
+  <mat-error>{{ error }}</mat-error>
 
-  <button mat-icon-button matSuffix type="button"
-          [matTooltip]="(isHidden ? 'Show' : 'Hide') + ' password-field'"
-          (click)="isHidden = !isHidden">
-    <mat-icon>{{ isHidden ? 'visibility_off' : 'visibility' }}</mat-icon>
+  <button
+    mat-icon-button
+    matSuffix
+    type="button"
+    [matTooltip]="(isHidden ? 'Show' : 'Hide') + ' password-field'"
+    (click)="isHidden = !isHidden"
+  >
+    <mat-icon>{{ isHidden ? "visibility_off" : "visibility" }}</mat-icon>
   </button>
 </mat-form-field>
