--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,6 @@
 <aside>
   <ng-container *ngIf="token; else unauthorized">
-    <a mat-button routerLink="/dashboard"
-       routerLinkActive="mat-flat-button">
+    <a mat-button routerLink="/dashboard" routerLinkActive="mat-flat-button">
       <mat-icon>dashboard</mat-icon>
       Dashboard
     </a>
@@ -13,14 +12,12 @@
   </ng-container>
 
   <ng-template #unauthorized>
-    <a mat-button routerLink="/login"
-       routerLinkActive="mat-flat-button">
+    <a mat-button routerLink="/login" routerLinkActive="mat-flat-button">
       <mat-icon>exit_to_app</mat-icon>
       Login
     </a>
 
-    <a mat-button routerLink="/register"
-       routerLinkActive="mat-flat-button">
+    <a mat-button routerLink="/register" routerLinkActive="mat-flat-button">
       <mat-icon>person_add</mat-icon>
       Register
     </a>
