--- a/src/app/components/form-fields/name-field/name-field.component.html
+++ b/src/app/components/form-fields/name-field/name-field.component.html
@@ -1,9 +1,11 @@
 <mat-form-field appearance="outline">
   <mat-label>Name</mat-label>
-  <input matInput type="text" [formControl]="control"/>
+  <input matInput type="text" [formControl]="control" />
 
   <mat-icon matPrefix>account_circle</mat-icon>
-  <mat-error>{{ getError() }}</mat-error>
+  <mat-error>{{ error }}</mat-error>
 
-  <mat-hint align="end">{{ control.value?.length || 0 }}/{{ maxLength }}</mat-hint>
+  <mat-hint align="end"
+    >{{ control.value?.length || 0 }}/{{ maxLength }}</mat-hint
+  >
 </mat-form-field>
