--- a/src/app/components/form-fields/tel-field/tel-field.component.html
+++ b/src/app/components/form-fields/tel-field/tel-field.component.html
@@ -1,7 +1,7 @@
 <mat-form-field appearance="outline">
   <mat-label>Phone</mat-label>
-  <input matInput type="tel" [formControl]="control"/>
+  <input matInput type="tel" [formControl]="control" />
 
   <mat-icon matPrefix>phone</mat-icon>
-  <mat-error>{{ getError() }}</mat-error>
+  <mat-error>{{ error }}</mat-error>
 </mat-form-field>
