--- a/src/app/components/rate-table/rate-table.component.html
+++ b/src/app/components/rate-table/rate-table.component.html
@@ -4,16 +4,22 @@
 
     <mat-card-subtitle>
       Fetched from
-      <a href="https://home.treasury.gov/" target="_blank">the official website</a>
+      <a href="https://home.treasury.gov/" target="_blank"
+        >the official website</a
+      >
       of the United States Government
     </mat-card-subtitle>
 
     <div [matTooltip]="token ? '' : 'You must login to subscribe!'">
-      <a mat-flat-button color="primary"
-         routerLink="/subscribe" [disabled]="!token">
+      <button
+        mat-flat-button
+        color="primary"
+        routerLink="/subscribe"
+        [disabled]="!token"
+      >
         <mat-icon>add_alert</mat-icon>
         Subscribe to updates
-      </a>
+      </button>
     </div>
   </mat-card-header>
 
@@ -24,15 +30,15 @@
   <div class="table-container">
     <table mat-table [dataSource]="rates">
       <ng-container *ngFor="let col of cols" [matColumnDef]="col">
-       <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
+        <th mat-header-cell *matHeaderCellDef>{{ col }}</th>
 
-       <td mat-cell *matCellDef="let row">
-         {{ col === 'DATE' ? (row[col] | date: 'shortDate') : row[col] }}
-       </td>
+        <td mat-cell *matCellDef="let row">
+          {{ col === "DATE" ? (row[col] | date: "shortDate") : row[col] }}
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="cols"></tr>
-      <tr mat-row *matRowDef="let row; columns: cols;"></tr>
+      <tr mat-row *matRowDef="let row; columns: cols"></tr>
     </table>
   </div>
 
