--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import './themes';
-@import './mixins';
+@import "./scss/themes.scss";
+@import "./scss/mixins.scss";
 
 html {
   scroll-behavior: smooth;
@@ -27,9 +27,11 @@ body {
     @include sm {
       width: 50%;
     }
+
     @include md {
       width: 37.5%;
     }
+
     @include lg {
       width: 25%;
     }
